--- a/tiø4317_project.ipynb
+++ b/tiø4317_project.ipynb
@@ -3381,6 +3381,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Improvements\n",
+    "\n",
+    "While the implemented trading strategy yielded dissapointing results, several avenues exist for enhancing its performance and robustness:\n",
+    "\n",
+    "One critical limitation of the current approach is its equal treatment of trading signals, regardless of prevailing market volatility. Integrating volatility modeling - such as rolling standard deviations, GARCH models, or realized volatility metrics - can help identify high-risk regimes. By filtering out trades during periods of heightened volatility, the strategy could avoid disproportionately large drawdowns and improve its risk-adjusted performance. This refinement would act as a dynamic risk-control mechanism, potentially improving both the Sharpe ratio and downside protection.\n",
+    "\n",
+    "Another improvement would be to optimize trading parameters - such as the maximum trade duration, threshold levels, or profit-taking rules - within the in-sample training period. While care must be taken to avoid overfitting, systematic grid search or Bayesian optimization could help identify parameter sets that maximize out-of-sample performance metrics such as cumulative return or Sharpe ratio. This would allow the strategy to adapt more precisely to the specific characteristics of the data and improve signal execution efficiency.\n",
+    "\n",
+    "Finally, extending the strategy to other asset pairs that exhibit a stronger or more stable long-term relationship may yield better results. The success of any mean-reversion strategy heavily depends on the strength and persistence of the underlying relationship. Conducting a pre-analysis to identify pairs with higher historical correlation, stronger cointegration, or lower spread volatility could improve the consistency and profitability of trading signals. This cross-pair robustness check would also test the generalizability of the strategy framework."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Use of LLMs"
    ]
   },
